django framework installation

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "framework": null,
   "builds": [
     {
-      "src": "messaging_app/wsgi.py",
+      "src": "myproject/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize":  "15mb", "runtime":  "python3.9" }
     }
@@ -10,7 +10,7 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "messaging_app/wsgi.py",
+      "dest": "myproject/wsgi.py",
       "headers": {
         "Access-Control-Allow-Origin": "*",
         "Access-Control-Allow-Methods": "GET, POST, OPTIONS, DELETE, PUT"
@@ -18,7 +18,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "messaging_app/wsgi.py"
+      "dest": "myproject/wsgi.py"
     }
   ]
 }
